landing_page_needs_repurposing/containers/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neuais-colab
  labels:
    name: neuais-colab
    environment: production
